--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-zbus = "4.4.0"
+zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
 tokio = { version = "1.40.0", features = ["full"] }
+futures-util = "0.3.30"
