--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,5 +30,5 @@ features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_Foundation",
     "Win32_System_LibraryLoader",
-    "Win32_System_WtsApi32",
+    "Win32_System_RemoteDesktop",
 ]
